# mipt-sem1-algorithms

algo-s2-hw1/: CMakeLists.txt  README.md  main.cpp
algo-s2-hw1/src/: matrix.h  matrix.hpp
algo-s2-hw2/: CMakeLists.txt  main.cpp
algo-s2-hw2/src/: Mat4x4.h  Mat4x4.hpp  Vec4.h  Vec4.hpp  mat_lib.hpp
algo-s2-hw3/: cont.cpp
algo-s2-hw4/: cont.cpp
algo-s2-hw5/: dec_tree.h
algo-s2-hw6/: mhash.h
